src/features/editor/Editor.module.css
.editorLayout {
  display: grid;
  grid-template-rows: 50px 1fr;
  gap: 16px;
}

.editorActions {
  grid-row: 1 / 2;

  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 0 20px;
  min-width: 410px;
  text-align: center;

  background-color: var(--primary);
  border-radius: 10px;
}

.actionGroup {
  display: flex;
  gap: 8px;
  align-items: center;
}

.editorMain {
  grid-row: 2 / 3;

  display: grid;
  grid-template-columns: 70px 1fr;
  background-color: var(--primary);
  padding-top: 24px;
  border-radius: 10px;
}

.editorSidebar {
  grid-column: 1 / 2;
}

.editorContent {
  grid-column: 2 / 3;
  color: white;
  padding: 0px 24px;
  display: flex;
  flex-direction: column;
}

h2 {
  font-size: 24px;
  font-weight: 400;
  margin-bottom: 16px;
}

ul {
  list-style-type: none;
  padding: 0;
  margin: 0;
}

li {
  margin-bottom: 12px;
  display: flex;
  justify-content: space-between;
  gap: 8px;
}

